	* Added new C++ extension called "app-dcpp"
	* app-chromium: Changed post-processor to convert decrypted passwords to string
	* app-chromium: Changed to ignore login data blacklisted by user
	* app-skype: Changed file_main_db class to retrieve all columns from tables
	* app-skype: Added support for chat messages
	* app-skype: Removed pimpl idiom from vfs_processor_impl
	* date-code: Fixed system lookup error
	* evidence-viewer: Changed to use chat-message.app_name attribute
	* libmobius_core: Improved error handling on pod::map::pop_map function
	* libmobius_core: Added new method decoder::sgml::parser::get_last
	* libmobius_core: Added new method decoder::sgml::parser::get_minidom
	* libmobius_core: Added new method database::new_select_statement (table_name, cols names)
	* libmobius_core: Changed to load C++ extensions directly from data/extensions folder
	* libmobius_framework: Changed function ant_impl_vfs_processor::run to create a new transaction
	* libmobius_framework: Added support for Windows.old/Users folders on function get_username_from_path
	* libmobius_framework: Added support for Windows.old/Users folders on ant_impl_vfs_processor::_scan_user_folders method
	* libmobius_python: Added new function decoder::hexstring
	* libmobius_python: Added new method decoder.sgml.parser.get_last
	* pymobius.registry.user_accounts: Fixed error in TS_Property constructor
	* pymobius.app.skype.skype: Removed module
	* pymobius.ant.turing.test_case_passwords: Convert all passwords to string before testing
	* pymobius.ant.turing.registry_passwords: Convert PSSP passwords to string before testing
	* pymobius.ant.turing.dpapi_user_mk: Retrieve Users DPAPI keys from WinXP folders
	* pymobius.application: Removed installation of C++ extensions

Mobius Forensic Toolkit 2.22
	* app-ares: Improved evidence tags
	* app-ares: Changed to save remote-party-shared-file evidences
	* app-chromium: Improved evidence tags
	* app-emule: Improved evidence tags